docs(website): Fix gradient background overflowing at bottom of page

--- a/docs/assets/main.css
+++ b/docs/assets/main.css
@@ -35,11 +35,14 @@ body {
     padding: 0;
     font-family: Roboto, Arial, Helvetica, sans-serif;
     color: #444;
+}
+
+/* Header */
+#headers {
     background: rgba(56,124,200,1);
     background: linear-gradient(90deg, rgba(100,83,158,1) 0%, rgba(56,124,200,1) 100%);
 }
 
-/* Header */
 header {
     display: flex;
     justify-content: space-between;
